# cloud-storage

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.test  Makefile  README.md  compose.dev.yaml  compose.test.yaml  pyproject.toml  test.env
.github/workflows/: lint.yml  test.yml
migration/: env.py
migration/versions/: 7780e8725411_initial.py
src/cloud_storage/: config.py  ioc.py  logger.py  main.py
src/cloud_storage/application/: dto.py  exceptions.py  interactors.py  interfaces.py
src/cloud_storage/domain/: exceptions.py  models.py  value_objects.py
src/cloud_storage/infrastructure/: bcrypt_hasher.py  minio_gateway.py  redis_gateway.py  zip_gateway.py
src/cloud_storage/infrastructure/database/: gateways.py  orm.py  session.py
src/cloud_storage/infrastructure/web_session/: dto.py  interfaces.py  redis_gateway.py
src/cloud_storage/presentation/: exceptions.py  handlers.py  middlewares.py  schemas.py
tests/: test_integrations.py  test_units.py
tests/test_integrations/: conftest.py  test_files.py  test_http.py  test_user.py
tests/units/: test_domain.py
tests/units/domain/: test_logic.py
