[tool.poetry]
name = "cloud-storage"
version = "0.1.0"
description = ""
authors = ["ratmeow <rtm_bis@mail.ru>"]
readme = "README.md"
packages = [{include = "cloud_storage", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
