[tool.poetry]
name = "cloud-storage"
version = "0.1.0"
description = ""
authors = ["ratmeow <rtm_bis@mail.ru>"]
readme = "README.md"
packages = [{include = "cloud_storage", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
bcrypt = "^5.0.0"
sqlalchemy = "^2.0.44"
pydantic = "^2.12.4"
python-dotenv = "^1.2.1"
asyncpg = "^0.30.0"
alembic = "^1.17.1"
redis = "^7.0.1"
aioboto3 = "^15.5.0"
asynczipstream = "^1.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.0"
mypy = "^1.19.1"
ruff = "^0.14.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"